MM-0: .env.example change

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME="Project Base"
+APP_NAME="Motor Market"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=America/Sao_Paulo
-APP_URL=http://project_base.site
+APP_URL=http://motormarket.site
 
 APP_MAINTENANCE_DRIVER=file
 APP_MAINTENANCE_STORE=database
@@ -18,7 +18,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=project_base
+DB_DATABASE=motormarket
 DB_USERNAME=root
 DB_PASSWORD=root
 
