--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.4",
-        "livewire/volt": "^1.0",
-        "spatie/laravel-pdf": "^1.5"
+        "livewire/volt": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
